# serializer version: 1
# name: test_feature_spec_version_deterministic
  '2ba05b92158fe23361915ead3857425de35b65ea9e5276562843d2d37144f4ad'
# ---
# name: test_feature_spec_version_includes_all_properties
  '1e512589810ef79a0a799ea2c1d3883cbaa13a881ccb3131148d8310b083d433'
# ---
# name: test_feature_spec_version_recorded_in_metadata_store
  dict({
    'feature_key': 'recorded/feature',
    'metaxy_feature_spec_version': 'a63b318fc2b22e91efd9a1ed08c555358ea7ce351783ddb7c44e724a3956fbe4',
    'metaxy_feature_version': '0c7b2d83252fbf2f689bec7d37c4f7ffb103755d11eafabc1e000a372f415d83',
    'metaxy_snapshot_version': '14d4294da40f4ab27ca85eb739fffd70e92c92522dbcba995cfa2aa343988bf3',
  })
# ---
# name: test_feature_spec_version_stored_in_snapshot
  dict({
    'feature_class_path': 'test_spec_version.SnapshotFeature',
    'feature_spec': dict({
      'deps': list([
      ]),
      'fields': list([
        dict({
          'code_version': '1',
          'deps': list([
          ]),
          'key': list([
            'data',
          ]),
        }),
      ]),
      'id_columns': list([
        'sample_uid',
      ]),
      'key': list([
        'snapshot',
        'test',
      ]),
      'metadata': dict({
      }),
    }),
    'metaxy_feature_spec_version': 'd03a54f131ed6a265d968847078dcd7bbdc63f75593b041cd5b908984107e0ed',
    'metaxy_feature_tracking_version': '9f2968a378e64f5a3d1f1d85d55a9c9e887a66faee768ea72c961d02957d0c40',
    'metaxy_feature_version': '7cfde77960e3cf10327e9cb97f311418b101fc5ee2c146922a997306e318edaf',
    'project': 'test',
  })
# ---
# name: test_feature_spec_version_with_column_selection_and_rename
  '3bb050c2694b2dd47bcdfecf503a040723bcd2f126051cd57716db41d8a508ec'
# ---
# name: test_feature_spec_version_with_multiple_complex_deps
  'b32a4a2ced5d085de20d7b3c80615f9d6bcc12b9f7c4d22e70dd9559bd9402e0'
# ---
